sfdx-source/main/default/objects/VCC_Progress_Note_Custom_Section__mdt/fields/VCC_Display_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Display_Section_Name__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Section Name</label>
    <type>Checkbox</type>
</CustomField>