sfdx-source/main/default/objects/VCC_Progress_Note_Custom_Section__mdt/fields/VCC_Fields__c.field-meta.xml
<CustomField>
    <fullName>VCC_Fields__c</fullName>
    <description>The API names of the fields to be added to the section, separated by commas.</description>
    <inlineHelpText>The API names of the fields to be added to the section, separated by commas.</inlineHelpText>
    <label>Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>