sfdx-source/main/default/objects/VCC_Progress_Note_Custom_Section__mdt/fields/VCC_Progress_Note_Configuration__c.field-meta.xml
<CustomField>
    <fullName>VCC_Progress_Note_Configuration__c</fullName>
    <label>Progress Note Configuration</label>
    <referenceTo>VCC_Progress_Note_Configuration__mdt</referenceTo>
    <relationshipLabel>Custom Sections</relationshipLabel>
    <relationshipName>VCC_Progress_Note_Custom_Sections</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>