sfdx-source/main/default/objects/VCC_Progress_Note_Custom_Section__mdt/fields/VCC_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>VCC_Sort_Order__c</fullName>
    <description>Determines the order of items in a sorted list. Lower values appear first.</description>
    <inlineHelpText>Enter a number to specify the item&apos;s position in the sort order. Lower numbers will appear first.</inlineHelpText>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>